Attempting to fix spacing

--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,8 @@
+/*-- modern normalize --*/
+progress,sub,sup{vertical-align:baseline}*,::after,::before{box-sizing:border-box}html{font-size:62.5%;line-height:1.2;-webkit-text-size-adjust:100%;-moz-tab-size:4;tab-size:4}body{font-size:1.6rem;margin:0;}hr{height:0;color:inherit}abbr[title]{text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}table{text-indent:0;border-color:inherit}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}::-moz-focus-inner{border-style:none;padding:0}:-moz-focusring{outline:ButtonText dotted 1px}:-moz-ui-invalid{box-shadow:none}legend{padding:0}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}img{width:100%;height:auto;user-select:none;}button{color:inherit;}a,button{touch-action: manipulation;}svg{height:100%;width:100%;fill:currentColor;pointer-events:none;}iframe,video{height:100%;width:100%}
+/*-- 
+Basic Reset--*/
+html, body, div, section, main, article, aside, p, h1, h2, h3, h4, h5, h6, nav, footer, header, figure, blockquote {margin: 0;padding: 0;}
 :root {
     --bg: #f4dcc7;
     --lbg: #ffefe17b;
@@ -11,18 +16,6 @@ a {
     color: inherit;
 }
 
-a:link {
-
-}
-a:visited {
-
-}
-a:hover {
-
-}
-a:active {
-
-}
 html {
     font-size: 62.5%;
 }
@@ -67,14 +60,18 @@ nav, footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem; 
-
+    padding: 1rem 2rem;
 }
 nav div {
     display:flex;
 }
 .text {
-    flex-wrap: ;
+    gap: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start; /* Keeps items from stretching */
+    gap: 1rem;
 }
 .logo {
     align-items: center;
@@ -92,45 +89,75 @@ nav div {
 .logo {
     justify-content: center;
 }
+.poster {
+    display: block;
+    margin-right: auto;
+    width: 80%;
+    padding: 3rem;
+}
+
+.poster img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 2rem;
+}
+.text {
+    overflow: hidden;
+    display: flex;
+    align-items: flex-start;
+}
 nav img {
     height: 60px;
     width: auto;
 }
 section {
     display: grid;
+    align-items: left;
 }
 section.odd {
     grid-template-columns: 8fr 4fr;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 section.even {
     grid-template-columns: 4fr 8fr;
+    margin-bottom: 0;
 }
 div.text {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 3rem;
+}
+.poster:hover {
+    opacity: 1; /* Not sure if I want to make poster have hoverstate?*/
 }
 .more-links {
     background: var(--acc);
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto; 
+    display: block;
+    padding: 10px 5px; 
+    text-align: left; 
+    align-self: flex-start;
     color: var(--lbg);
     width: 10rem;
     padding: 1rem 2rem;
     text-align: center;
     font-weight: 600;
     text-transform: lowercase;
-    margin: 2rem auto;
     border-radius: 2rem;
     border: 4px solid var(--bg);
     opacity: .8;
     transition: all .15s ease-in;
-
 }
+
 .more-links:hover {
     opacity: 1;
 }
-    
 
-}
 /*-- Media Queries --*/
 
 @media screen and (max-width: 768px) {
